Fixed overflow

--- a/assets/styles/layout/_content.scss
+++ b/assets/styles/layout/_content.scss
@@ -5,6 +5,7 @@
     .layout-content-slot {
         flex: 1 1 auto;
         width: 1%;
+        padding-top: .5rem;
     }
 }
 
