--- a/assets/styles/layout/_sidebar.scss
+++ b/assets/styles/layout/_sidebar.scss
@@ -19,7 +19,7 @@
 
     nav {
         padding: 0;
-        margin: -.5rem 0 0 0;
+        margin: 0;
         flex-grow: 1;
     }
 
@@ -30,6 +30,7 @@
 
         > li {
             margin-bottom: .25rem;
+            
             > button, 
             > a {
                 display: flex;
